--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
           {{deck.title}}
         </a>
         {{else}}
-        <a class="brand" href="/decks">
+        <a class="brand" href="/">
           <img src="/icon.png" alt="Logo" width="20">
           Presenteract
         </a>
@@ -59,8 +59,9 @@
                 <li><a href="#">Login to create/edit/run Presenations</a></li>
               {{/if}}
             {{else}}
-              <li><a href="#" class="muted">Audience Only in App</a></li>
+              <li><a href="/about#audience" class="muted">Audience Only in App</a></li>
             {{/if}}
+            <li><a href="/"><i class="icon-home"></i> Show Open Decks</a></li>
             <li><a href="/about"><i class="icon-question-sign"></i> About</a></li>
           </ul>
         </div>
@@ -71,8 +72,9 @@
 </template>
 
 <template name="footer">
-<footer class="well">
+<footer class="well" style="margin-top: 10px;">
   &copy; <a href="http://presenteract.meteor.com">Presenteract</a> 2013
+  <span class="muted">{{version}}</span>
   <div class="pull-right muted">
     <small>
     Built with
