minor footer/about updates

--- a/client/index.html
+++ b/client/index.html
@@ -74,13 +74,21 @@
 <template name="footer">
 <footer class="well" style="margin-top: 10px;">
   &copy; <a href="http://presenteract.meteor.com">Presenteract</a> 2013
+  &nbsp;
   <span class="muted">{{version}}</span>
+  &nbsp;
+  &nbsp;
+  <a href="https://play.google.com/store/apps/details?id=com.meteor.presenteract" target="_blank" title="Get the iOS App"><img
+    src="http://icons.iconarchive.com/icons/visualpharm/icons8-metro-style/64/Cell-Phones-Iphone-icon.png" width="32" alt="ios app"></a>
+  <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=646279445&mt=8" target="_blank" title="Get the Android App"><img
+    src="http://cdn1.iconfinder.com/data/icons/WPZOOM_Social_Networking_Icon_Set/64/android.png" width="32" alt="android app"></a>
   <div class="pull-right muted">
     <small>
     Built with
     <a href="http://meteor.com">MeteorJS</a>
     <a href="http://phonegap.com">PhoneGap</a>
-    <a href="/about">More...</a>
+    <a href="http://twitter.github.io/bootstrap/">Twitter Bootstrap</a>
+    <a href="/about#built-with">More...</a>
     </small>
   </div>
 </footer>
